<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:background="@android:drawable/editbox_background_normal"
    android:orientation="vertical"
    android:weightSum="2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lecture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/searchbox_margin"
            android:text="웹프로그래밍"
            android:textColor="@color/THEME"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/lecture_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/searchbox_margin"
            android:background="@android:drawable/ic_menu_delete"
            android:backgroundTint="@color/THEME" />
    </RelativeLayout>

    <TextView
        android:id="@+id/lecture_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchbox_margin"
        android:layout_marginLeft="@dimen/searchbox_margin"
        android:layout_marginRight="@dimen/searchbox_margin"
        android:textColor="@color/BLACK"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/lecture_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchbox_margin"
        android:layout_marginLeft="@dimen/searchbox_margin"
        android:layout_marginRight="@dimen/searchbox_margin"
        android:textColor="@color/GRAY"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/lecture_prof"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchbox_margin"
        android:layout_marginLeft="@dimen/searchbox_margin"
        android:layout_marginRight="@dimen/searchbox_margin"
        android:textColor="@color/GRAY"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/lecture_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchbox_margin"
        android:layout_marginLeft="@dimen/searchbox_margin"
        android:layout_marginRight="@dimen/searchbox_margin"
        android:textColor="@color/GRAY"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/lecture_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/searchbox_margin"
        android:text="@string/memo"
        android:textColor="@color/BLACK"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/lecture_memo_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/searchbox_margin"
        android:text="@string/memo_info"
        android:textColor="@color/GRAY"
        android:textSize="13dp" />

    <RelativeLayout
        android:id="@+id/lecture_homework_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchbox_margin"
        android:layout_marginLeft="@dimen/searchbox_margin"
        android:layout_marginRight="@dimen/searchbox_margin"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lecture_homework"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GRAY"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lecture_homework_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GRAY"
                android:textSize="13dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/lecture_homework_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_menu_delete"
            android:backgroundTint="@color/THEME" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lecture_exam_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchbox_margin"
        android:layout_marginLeft="@dimen/searchbox_margin"
        android:layout_marginRight="@dimen/searchbox_margin"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lecture_exam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GRAY"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lecture_exam_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GRAY"
                android:textSize="13dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/lecture_exam_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_menu_delete"
            android:backgroundTint="@color/THEME" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lecture_study_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchbox_margin"
        android:layout_marginLeft="@dimen/searchbox_margin"
        android:layout_marginRight="@dimen/searchbox_margin"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lecture_study"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GRAY"
                android:textSize="13dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lecture_study_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GRAY"
                android:textSize="13dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/lecture_study_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:background="@android:drawable/ic_menu_delete"
            android:backgroundTint="@color/THEME" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lecture_write_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/lecture_add_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/searchbox_margin"
            android:text="@string/add_memo"
            android:textColor="@color/BLACK"
            android:textSize="17dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/searchbox_margin"
            android:layout_marginLeft="@dimen/searchbox_margin"
            android:layout_marginRight="@dimen/searchbox_margin"
            android:background="@android:drawable/editbox_background_normal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/searchbox_margin"
                android:text="@string/type"
                android:textColor="@color/BLACK"
                android:textSize="17dp" />

            <RadioGroup
                android:id="@+id/lecture_memo_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/type_homework"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:text="@string/homework" />

                <RadioButton
                    android:id="@+id/type_exam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/default_margin"
                    android:text="@string/exam" />

                <RadioButton
                    android:id="@+id/type_study"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/study" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/searchbox_margin"
                android:text="@string/title"
                android:textColor="@color/BLACK"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/lecture_memo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/searchbox_margin"
                android:text="@string/description"
                android:textColor="@color/BLACK"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/lecture_memo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:textSize="13dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/lecture_btn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="@dimen/searchbox_margin"
        android:layout_marginLeft="@dimen/searchbox_margin"
        android:layout_marginRight="@dimen/searchbox_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/add_btn"
        android:gravity="center"
        android:textColor="@color/WHITE"
        android:textSize="15dp" />
</LinearLayout>